--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,27 +1,22 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+export interface Props extends astroHTML.JSX.AnchorHTMLAttributes {}
 
-type Props = HTMLAttributes<'a'>;
-
-const { href, class: className, ...props } = Astro.props;
-
-const { pathname } = Astro.url;
-const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === '/' + subpath?.[0];
+const { href, class: className, ...props } = Astro.props
+const isActive = href === Astro.url.pathname.replace(/\/$/, '')
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+  <slot />
 </a>
 <style>
-	a {
-		display: inline-flex;
+  a {
+    display: inline-flex;
     text-decoration: none;
-    align-items:center;
+    align-items: center;
     gap: 4px;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  }
+  a.active {
+    font-weight: bolder;
+    text-decoration: underline;
+  }
 </style>
