feat: 🎸 update new content & fix Footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,14 +10,14 @@ import ThemeToggle from './ThemeToggleButton'
   <div class="mx-auto max-w-3xl">
     <nav class="flex items-center gap-3 text-base">
       <a href="/" class="group">
-        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg">
+        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-lg" href={HOMEPAGE_URL}>
           <FootprintIcon />
           {SITE_TITLE}
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
-        <HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
-        <HeaderLink href="https://github.com/withastro/astro" target="_blank"
+        <HeaderLink href={HOMEPAGE_URL}>HOME</HeaderLink>
+        <HeaderLink href="https://github.com/kaminzhi/kaminzhi.github.io" target="_blank"
           ><IoLogoGithub />Source</HeaderLink
         >
       </div>
