feat: 🎸 IG logo change color
switch mode change icon color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,6 +28,7 @@ const today = new Date();
     <a href="https://www.instagram.com/kamin_zhi" target="_blank">
       <span class="sr-only">Follow Me on Instagram</span>
       <svg xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
         viewBox="0 2 50 50"
         width="38px"
         height="36px">
