--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Footer from '../components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config'
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
+import Masthead from '../components/Masthead.astro'
 ---
 
 <!DOCTYPE html>
@@ -15,10 +16,15 @@ import Content from '../components/Content.astro'
   <Body>
     <Header title={SITE_TITLE} />
     <main class="pt-[56px]">
-      <h1 class="font-mplus text-center">{SITE_DESCRIPTION}</h1>
+      <Masthead />
       <Content>
         <section>
-          <p class="mb-8 indent-4">Content</p>
+          <p class="mb-8 indent-4">
+            Hi, I am a college student from Taiwan, and I am interested in programming and web development.
+            I never thought that i would be able to create a website like this, but here i am.
+            During my high school years, I was entirely focused on hardware and had never considered moving toward software before going to college.
+          </p>
+        </section>
       </Content>
     </main>
     <Footer />
