fix: 🐛 doc put in the page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import ThemeToggle from './ThemeToggleButton'
         >
       </div>
       <div class="flex-1"></div>
-      <ThemeToggle client:load />
+      <ThemeToggle client:visible />
     </nav>
   </div>
 </header>
