--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,21 @@
 ---
+import type { ImageMetadata } from 'astro';
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config'
+import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config'
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
+import { IoArrowForward } from 'react-icons/io5'
 import Masthead from '../components/Masthead.astro'
+import { Image } from 'astro:assets';
+import CreatedWithSection from '../components/CreatedWithSection.astro'
+
+const posts = (await Astro.glob('./posts/*.md')).sort(
+  (a: any, b: any) =>
+    new Date(b.frontmatter.createdAt).valueOf() -
+    new Date(a.frontmatter.createdAt).valueOf()
+)
 ---
 
 <!DOCTYPE html>
@@ -24,6 +34,20 @@ import Masthead from '../components/Masthead.astro'
             I never thought that i would be able to create a website like this, but here i am.
             During my high school years, I was entirely focused on hardware and had never considered moving toward software before going to college.
           </p>
+        </section>
+        <section>
+          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            {
+              posts.map(post => (
+                <li class="text-center mb-4">
+                  <a href={post.url}> 
+                    <div class="mt-3 text-xl">{post.frontmatter.title}</div>
+                    <div class="opacity-70">{post.frontmatter.description}</div>
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
         </section>
       </Content>
     </main>
