fix: 🐛 remove dev path

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import ThemeToggle from './ThemeToggleButton'
   <div class="mx-auto max-w-3xl">
     <nav class="flex items-center gap-3 text-base">
       <a href="/" class="group">
-        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-xl" href={HOMEPAGE_URL}>
+        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-xl" href="#">
           <FootprintIcon />
           {SITE_TITLE}
         </h2>
