--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config'
+import { SITE_DESCRIPTION } from '../config'
 ---
 
 <section class="relative mb-6 h-80 flex justify-center items-center">
