--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -30,7 +30,7 @@ const {
 
   <Body>
     <Header />
-    <style global>
+    <style>
     main article.markdown-body {
       ul {
         @apply list-disc list-inside pl-4 mb-4
