--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro'
 import { HOMEPAGE_URL, SITE_TITLE } from '../config'
-import { IoLogoGithub } from 'react-icons/io5/index.js'
+import { IoLogoGithub } from 'react-icons/io5'
 import FootprintIcon from './icons/footprint'
 import ThemeToggle from './ThemeToggleButton'
 ---
