--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,14 +3,13 @@ import HeaderLink from './HeaderLink.astro'
 import { HOMEPAGE_URL, SITE_TITLE } from '../config'
 import { IoLogoGithub } from 'react-icons/io5'
 import FootprintIcon from './icons/footprint'
-import ThemeToggle from './ThemeToggleButton'
+import ThemeSwitcher from './ThemeToggleButton'
 ---
-
 <header class="fixed w-full p-2 z-20 backdrop-blur-md">
   <div class="mx-auto max-w-3xl">
     <nav class="flex items-center gap-3 text-base">
       <a href="/" class="group">
-        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-xl">
+        <h2 class="font-semibold tracking-tighter p-2 font-mplus text-xl transition-transform">
           <FootprintIcon />
           {SITE_TITLE}
         </h2>
@@ -22,7 +21,7 @@ import ThemeToggle from './ThemeToggleButton'
         >
       </div>
       <div class="flex-1"></div>
-      <ThemeToggle client:visible />
+      <ThemeSwitcher client:visible />
     </nav>
   </div>
 </header>
