--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,15 @@ body {
   text-rendering: optimizeLegibility;
   overflow-wrap: break-word;
 }
+
+.transition-transform {
+  transition: transform 0.6s ease;
+}
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+.flip:hover {
+  transform: rotateY(0deg);
+}
