chore: 🤖 add markdown package and update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
       <Content>
         <section>
           <p class="mb-7 indent-4">
-            Hi, I am a college student from Taiwan, and I am interested in programming and web development.
-            I never thought that i would be able to create a website like this, but here i am.
+            Hi, I am a college student from Taiwan, and I am interested in programming and web development.I never thought that i would be able to create a website like this, but here i am.
             During my high school years, I was entirely focused on hardware and had never considered moving toward software before going to college.
           </p>
         </section>
