--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,8 @@ const today = new Date();
 ---
 
 <footer class="text-zinc-500 p-4 text-center">
-  &copy; {today.getFullYear()} Made By <a href={HOMEPAGE_URL}>kamin_zhi</a>. All rights reserved.
+  This Page is Created With Astro, React, and Tailwind CSS.<br>
+&copy; {today.getFullYear()} Made By <a href={HOMEPAGE_URL}>kamin_zhi</a>. All rights reserved.
 	<div class="social-links">
 		<a href="https://twitter.com/kamin_zhi" target="_blank">
 			<span class="sr-only">Follow Me on Twitter</span>
