--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import HeaderLink from './HeaderLink.astro'
-import { HOMEPAGE_URL, SITE_TITLE } from '../config'
+import { HOMEPAGE_URL, SITE_TITLE, REPOSITORIES_URL } from '../config'
 import { IoLogoGithub } from 'react-icons/io5'
 import FootprintIcon from './icons/footprint'
 import ThemeSwitcher from './ThemeToggleButton'
@@ -16,7 +16,7 @@ import Menulist from './Menulist'
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
-        <HeaderLink href={HOMEPAGE_URL}>HOME</HeaderLink>
+        <HeaderLink href={REPOSITORIES_URL}><IoLogoGithub/>My Repo</HeaderLink>
         <HeaderLink href="https://github.com/kaminzhi/kaminzhi.github.io" target="_blank"
           ><IoLogoGithub />Source</HeaderLink
         >
