--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,8 @@
 ---
 import HeaderLink from './HeaderLink.astro'
-import { HOMEPAGE_URL, SITE_TITLE, REPOSITORIES_URL, PROJECT_URL } from '../config'
+import { HOMEPAGE_URL, SITE_TITLE, ALLLINKS_URL, PROJECT_URL } from '../config'
 import { IoLogoGithub } from 'react-icons/io5'
+import { LiaLinkSolid } from "react-icons/lia";
 import FootprintIcon from './icons/footprint'
 import ThemeSwitcher from './ThemeToggleButton'
 import Menulist from './Menulist'
@@ -16,7 +17,7 @@ import Menulist from './Menulist'
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
-        <HeaderLink href={REPOSITORIES_URL}><IoLogoGithub/>My Repo</HeaderLink>
+        <HeaderLink href={ALLLINKS_URL}><LiaLinkSolid />All My Links</HeaderLink>
         <HeaderLink href={PROJECT_URL} target="_blank"
           ><IoLogoGithub />Source</HeaderLink
         >
