fix: remove background image

--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -3,9 +3,9 @@ import { SITE_DESCRIPTION } from '../config'
 ---
 
 <section class="relative mb-6 h-80 flex justify-center items-center">
-  <div class="absolute w-full h-full overflow-hidden">
+  <!--div class="absolute w-full h-full overflow-hidden">
     <img src="../../public/mainbk.jpg" alt="">
-  </div>
+  </div-->
   <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="text-4xl font-mplus font-medium">{SITE_DESCRIPTION}</div>
     <div class="text-sky-300 text-2xl font-mplus">And Still Working (′゜ω。‵)</div>
